[gd_scene load_steps=46 format=3 uid="uid://bx4pfx6yj7wju"]

[ext_resource type="Script" uid="uid://dasd5n53igmnc" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://drcknofycpvwe" path="res://scenes/Player.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://ut13f3qdvdf6" path="res://assets/Terrain (16x16).png" id="2_vcsgt"]
[ext_resource type="PackedScene" uid="uid://ce3wonnktfqbu" path="res://scenes/Enemy.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://2taquvu8jeo4" path="res://scenes/Collectible.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://bxh4oeh46yxso" path="res://assets/Background(16x16).png" id="6_c01mt"]
[ext_resource type="Script" uid="uid://bepevo26gw5x5" path="res://scripts/ui.gd" id="6_q8u5g"]
[ext_resource type="Texture2D" uid="uid://cii47l55b0u2e" path="res://assets/UI/MedievalpauseButton.png" id="7_jlsqs"]
[ext_resource type="FontFile" uid="uid://bqvfycril1jn8" path="res://assets/Fonts/Kenney Future.ttf" id="8_3p2gp"]
[ext_resource type="Texture2D" uid="uid://cfh4pixs5b1cc" path="res://assets/UI/PauseButtonHover.png" id="8_q8u5g"]
[ext_resource type="Texture2D" uid="uid://dp7ibb5tp1s3a" path="res://assets/UI/panel-back.png" id="10_bjd11"]
[ext_resource type="Texture2D" uid="uid://bsm2qujsbfyy4" path="res://assets/UI/ResumeButton.png" id="11_qmy6f"]
[ext_resource type="Texture2D" uid="uid://dpgswo8601iqx" path="res://assets/UI/ResumeButtonHover.png" id="12_3p2gp"]
[ext_resource type="Texture2D" uid="uid://bvdr63xpit2uv" path="res://assets/UI/HelpButton.png" id="12_mwfav"]
[ext_resource type="Texture2D" uid="uid://byj2bq6ph51is" path="res://assets/UI/HelpButtonHover.png" id="14_cvmbd"]
[ext_resource type="Texture2D" uid="uid://crxox61e1myp8" path="res://assets/UI/BackButton.png" id="14_ft6cd"]
[ext_resource type="Texture2D" uid="uid://4err4mi8bb71" path="res://assets/UI/BackButtonHover.png" id="16_bb450"]
[ext_resource type="Texture2D" uid="uid://be2s1amax47ar" path="res://assets/UI/ExitButton.png" id="16_nfivy"]
[ext_resource type="Texture2D" uid="uid://dpkkcqaj1thnc" path="res://assets/UI/ExitButtonHover.png" id="17_1nqs0"]
[ext_resource type="Texture2D" uid="uid://c3kthwrehtwer" path="res://assets/UI/slide_hangle.png" id="18_1iba3"]
[ext_resource type="Texture2D" uid="uid://dem6c3snrjjau" path="res://assets/UI/MusicIcon.png" id="18_1nqs0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c01mt"]
texture = ExtResource("2_vcsgt")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.2374563, -8, -3.057598)
18:2/0 = 0
18:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.2374563, -8, -3.057598)
19:2/0 = 0
19:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.2374563, -8, -3.057598)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.71943474, 8, 0.71943474, -1.4388695, 8, -0.71943474, 8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.8992939, -1.6187286, 1.0791531, 0.8992939, 8, -8, 8)
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 1.0791531, -8, 1.2590103, 8)
1:9/0 = 0
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.6187286, 8, -1.4388695, -8, 8, -8, 8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.8992939, -1.6187286, 1.0791531, 0.8992939, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.8992939, -1.6187286, 1.0791531, 0.8992939, 8, -8, 8)
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_nxtc6"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_c01mt")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c01mt"]
size = Vector2(1147.5, 442)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lhr70"]
texture = ExtResource("7_jlsqs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jlsqs"]
texture = ExtResource("8_q8u5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wp0k4"]
texture = ExtResource("8_q8u5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3p2gp"]
texture = ExtResource("10_bjd11")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q8u5g"]
texture = ExtResource("11_qmy6f")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ft6cd"]
texture = ExtResource("12_3p2gp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bb450"]
texture = ExtResource("12_3p2gp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bjd11"]
texture = ExtResource("12_mwfav")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nfivy"]
texture = ExtResource("14_cvmbd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1nqs0"]
texture = ExtResource("14_cvmbd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ofn6"]
texture = ExtResource("16_nfivy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xa025"]
texture = ExtResource("17_1nqs0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_36rkl"]
texture = ExtResource("17_1nqs0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fs0b5"]
texture = ExtResource("18_1nqs0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1iba3"]
texture = ExtResource("14_ft6cd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ebg2g"]
texture = ExtResource("16_bb450")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yxlcp"]
texture = ExtResource("16_bb450")

[sub_resource type="Animation" id="Animation_1iba3"]
resource_name = "pause_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseMenu:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OpeningUISound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}],
"times": PackedFloat32Array(0.06666667)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_yxlcp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseMenu:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HelpMenu:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HelpMenu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ebg2g"]
resource_name = "pause_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HelpMenu:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HelpMenu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ClosingUISound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebg2g"]
_data = {
&"RESET": SubResource("Animation_yxlcp"),
&"pause_close": SubResource("Animation_ebg2g"),
&"pause_open": SubResource("Animation_1iba3")
}

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background2" type="CanvasLayer" parent="."]
layer = -2

[node name="TextureRect" type="TextureRect" parent="Background2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 238.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_c01mt")
stretch_mode = 1

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 180)

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_nxtc6")
format = 2
layer_0/tile_data = PackedInt32Array(851968, 786432, 4, 851969, 851968, 4, 851970, 851968, 4, 851971, 851968, 4, 851972, 851968, 4, 851973, 851968, 4, 851976, 131072, 9, 851977, 851968, 4, 851978, 851968, 4, 851979, 851968, 4, 851980, 851968, 4, 851981, 851968, 4, 851982, 851968, 4, 851983, 851968, 4, 851984, 851968, 4, 851985, 851968, 4, 851986, 851968, 4, 851987, 851968, 4, 851988, 851968, 4, 851989, 851968, 4, 851990, 851968, 4, 851991, 917504, 4, 786446, 786432, 4, 786447, 851968, 4, 786448, 851968, 4, 786449, 917504, 4, 589843, 851968, 5, 655379, 851968, 6, 589844, 917504, 5, 655380, 917504, 6, 589845, 851968, 5, 655381, 851968, 6, 589846, 917504, 5, 655382, 917504, 6, 458773, 1114112, 2, 327697, 851968, 4, 327698, 851968, 4, 327699, 917504, 4, 327694, 851968, 4, 327695, 851968, 4, 327696, 851968, 4, 327691, 851968, 4, 327692, 851968, 4, 327693, 851968, 4, 327688, 786432, 4, 327689, 851968, 4, 327690, 851968, 4, 655360, 786432, 4, 655361, 917504, 4, 524292, 786432, 4, 524293, 851968, 4, 524294, 917504, 4, 196611, 1245184, 2, 196612, 1179648, 2, 196613, 1245184, 2, 196609, 1114112, 2, 196610, 1179648, 2, 393222, 786432, 5, 786435, 786432, 5, 851974, 0, 9, 917512, 131072, 9, 917510, 0, 9, 65536, 0, 9, 131072, 0, 9, 196608, 0, 9, 262144, 0, 9, 327680, 0, 9, 393216, 0, 9, 458752, 0, 9, 524288, 0, 9, 589824, 0, 9, 720896, 0, 9, 786432, 0, 9, 458774, 1245184, 2, 0, 0, 8, 1, 65536, 8, 2, 65536, 8, 3, 65536, 8, 4, 65536, 8, 5, 65536, 8, 6, 65536, 8, 7, 65536, 8, 8, 65536, 8, 9, 65536, 8, 10, 65536, 8, 11, 65536, 8, 12, 65536, 8, 13, 65536, 8, 14, 65536, 8, 15, 65536, 8, 16, 65536, 8, 17, 65536, 8, 18, 65536, 8, 19, 65536, 8, 20, 65536, 8, 21, 65536, 8, 22, 65536, 8, 23, 131072, 8, 65559, 131072, 9, 131095, 131072, 9, 196631, 131072, 9, 262167, 131072, 9, 327703, 131072, 9, 393239, 131072, 9, 458775, 131072, 9, 524311, 131072, 9, 589847, 131072, 9, 655383, 131072, 9, 720919, 131072, 9, 786455, 131072, 9, 786438, 262144, 8, 786437, 196608, 8, 786440, 196608, 8, 786441, 262144, 8)

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(201, 200)

[node name="Enemy" parent="." instance=ExtResource("3")]
position = Vector2(594, 210)

[node name="Enemy2" parent="." instance=ExtResource("3")]
position = Vector2(549, 600)

[node name="Collectible" parent="." groups=["coins"] instance=ExtResource("4")]
position = Vector2(55, 462)

[node name="Collectible1" parent="." groups=["coins"] instance=ExtResource("4")]
position = Vector2(134, 120)

[node name="Collectible2" parent="." groups=["coins"] instance=ExtResource("4")]
position = Vector2(849, 217)

[node name="Collectible3" parent="." groups=["coins"] instance=ExtResource("4")]
position = Vector2(1054, 412)

[node name="Collectible4" parent="." groups=["coins"] instance=ExtResource("4")]
position = Vector2(1015, 598)

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(320, 800)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(255.25, 91)
shape = SubResource("RectangleShape2D_c01mt")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2
script = ExtResource("6_q8u5g")

[node name="HUD" type="Control" parent="UI"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 908.0
offset_top = 76.0
offset_right = 991.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("8_3p2gp")
text = "Coins: 0"

[node name="PauseButton" type="Button" parent="UI/HUD"]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 1025.0
offset_top = 57.0
offset_right = 1084.0
offset_bottom = 113.0
theme_override_styles/normal = SubResource("StyleBoxTexture_lhr70")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jlsqs")
theme_override_styles/hover = SubResource("StyleBoxTexture_wp0k4")

[node name="PauseMenu" type="Control" parent="UI"]
process_mode = 2
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 995
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Panel" type="Panel" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 300.0
offset_top = 81.0
offset_right = 911.0
offset_bottom = 571.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3p2gp")

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/Panel"]
process_mode = 2
layout_mode = 0
offset_left = 371.0
offset_top = 357.0
offset_right = 429.0
offset_bottom = 410.0
theme_override_styles/normal = SubResource("StyleBoxTexture_q8u5g")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ft6cd")
theme_override_styles/hover = SubResource("StyleBoxTexture_bb450")

[node name="HelpButtton" type="Button" parent="UI/PauseMenu/Panel"]
process_mode = 2
layout_mode = 0
offset_left = 285.0
offset_top = 358.0
offset_right = 345.0
offset_bottom = 411.0
theme_override_styles/normal = SubResource("StyleBoxTexture_bjd11")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nfivy")
theme_override_styles/hover = SubResource("StyleBoxTexture_1nqs0")

[node name="ExitButton" type="Button" parent="UI/PauseMenu/Panel"]
process_mode = 2
layout_mode = 0
offset_left = 199.0
offset_top = 358.0
offset_right = 259.0
offset_bottom = 411.0
theme_override_styles/normal = SubResource("StyleBoxTexture_2ofn6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xa025")
theme_override_styles/hover = SubResource("StyleBoxTexture_36rkl")

[node name="Label" type="Label" parent="UI/PauseMenu/Panel"]
layout_mode = 0
offset_left = 146.0
offset_top = 46.0
offset_right = 324.0
offset_bottom = 69.5
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_3p2gp")
theme_override_font_sizes/font_size = 20
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="HSlider" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 517.0
offset_top = 218.0
offset_right = 759.0
offset_bottom = 271.0
theme_override_icons/grabber = ExtResource("18_1iba3")
theme_override_icons/grabber_highlight = ExtResource("18_1iba3")
max_value = 1.0
step = 0.05
value = 0.8

[node name="SFX" type="HSlider" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 519.0
offset_top = 307.0
offset_right = 761.0
offset_bottom = 360.0
theme_override_icons/grabber = ExtResource("18_1iba3")
theme_override_icons/grabber_highlight = ExtResource("18_1iba3")
max_value = 1.0
step = 0.05
value = 0.8

[node name="MusicIcon1" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 463.0
offset_top = 211.0
offset_right = 504.0
offset_bottom = 244.0
theme_override_styles/normal = SubResource("StyleBoxTexture_fs0b5")

[node name="MusicIcon2" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 465.0
offset_top = 300.0
offset_right = 506.0
offset_bottom = 333.0
theme_override_styles/normal = SubResource("StyleBoxTexture_fs0b5")

[node name="BackgroundMusic" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 518.0
offset_top = 201.0
offset_right = 619.0
offset_bottom = 217.5
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_3p2gp")
theme_override_font_sizes/font_size = 8
text = "Background Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackgroundMusic2" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 520.0
offset_top = 289.0
offset_right = 605.0
offset_bottom = 305.5
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_3p2gp")
theme_override_font_sizes/font_size = 8
text = "Sound Effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="UI/PauseMenu"]
layout_mode = 0
offset_left = 506.0
offset_top = 379.0
offset_right = 612.0
offset_bottom = 395.5
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_3p2gp")
theme_override_font_sizes/font_size = 8
text = "Monsters Killed: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpMenu" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/HelpMenu"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 1139.0
offset_bottom = 670.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3p2gp")

[node name="Titlel" type="Label" parent="UI/HelpMenu/Panel"]
layout_mode = 0
offset_left = 328.0
offset_top = 53.0
offset_right = 586.0
offset_bottom = 76.5
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_3p2gp")
theme_override_font_sizes/font_size = 20
text = "Game Instructions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="UI/HelpMenu/Panel"]
layout_mode = 0
offset_left = 81.0
offset_top = 72.0
offset_right = 569.5
offset_bottom = 324.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_3p2gp")
theme_override_font_sizes/font_size = 12
text = "Operation Antidote
You are the worldâ€™s last hope. Infiltrate the Mad Scientist's lab, recover the Secret Formula, and escape before it's too late!

Avoid or killthe failed experiments roaming the halls. One touch is deadly!
Watch your step. The lab is rigged with hidden traps and death zones! Collect the coins to move on!!

Controls:  Move: Arrow Keys / WASD
    Jump: Space Bar (Press Twice to Double-jump)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BackButton" type="Button" parent="UI/HelpMenu/Panel"]
process_mode = 2
layout_mode = 0
offset_left = 1021.0
offset_top = 527.0
offset_right = 1081.0
offset_bottom = 580.0
theme_override_styles/normal = SubResource("StyleBoxTexture_1iba3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ebg2g")
theme_override_styles/hover = SubResource("StyleBoxTexture_yxlcp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_ebg2g")
}

[node name="OpeningUISound" type="AudioStreamPlayer2D" parent="UI"]

[node name="ClosingUISound" type="AudioStreamPlayer2D" parent="UI"]

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="pressed" from="UI/HUD/PauseButton" to="UI" method="_on_pause_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Panel/ResumeButton" to="UI" method="_on_resume_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Panel/HelpButtton" to="UI" method="_on_help_buttton_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Panel/ExitButton" to="UI" method="_on_exit_button_pressed"]
[connection signal="value_changed" from="UI/PauseMenu/Music" to="UI" method="_on_music_value_changed"]
[connection signal="value_changed" from="UI/PauseMenu/SFX" to="UI" method="_on_sfx_value_changed"]
[connection signal="pressed" from="UI/HelpMenu/Panel/BackButton" to="UI" method="_on_back_button_pressed"]
